# Vesselix

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  index.html  install.sh  package.json  vite.config.ts
.github/workflows/: aur.yml  ci.yml  docker.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
packaging/aur/: README.md
packaging/aur/vesselix-bin/: PKGBUILD
packaging/aur/vesselix-git/: PKGBUILD  vesselix.service
scripts/: update-aur-bin.sh
src/: App.tsx  index.css  main.tsx
src/components/: ActionsPanel.tsx  CommandPalette.tsx  ContainerDetailPanel.tsx  ContainerRow.tsx  ContainerTable.tsx  ContainerToolbar.tsx  InspectPanel.tsx  LogsPanel.tsx  LowStatsPanel.tsx  ModeToggle.tsx  RichStatsPanel.tsx  Sparkline.tsx  SplitLayout.tsx  StatsPanel.tsx  ThemeToggle.tsx  Toaster.tsx  TopStatusBar.tsx  icons.tsx  primitives.tsx  status.ts  tableLayout.ts
src/features/main/: MainScreen.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: format.ts  mockData.ts  mockLogs.ts  theme.ts  types.ts
src/runtime/: apiRuntime.ts  index.ts  mockRuntime.ts  types.ts
src/store/: appContext.ts  appState.tsx
