[package]
name = "vesselix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bollard = "0.18"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
include_dir = "0.7"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
